# SpicyNanoClaw

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  logging_utils.py  mcp_gateway.py
research/: 00_overview.md  01_repo_map_openclaw.md  02_repo_map_cc.md  03_research_roadmap.md  100_snc_worker_lifecycle_bookkeeping_v1.md  101_snc_milestone1_release_candidate.md  102_snc_milestone2_program.md  103_snc_module_workorders_round3.md  104_external_thread_phase5_plan.md  105_oc12_worker_invocation_seam_matrix.md  106_oc13_plugin_delivery_marketplace_rehearsal.md  107_cc12_delegation_ownership_queue_matrix.md  108_snc_milestone2_product_envelope.md  109_external_thread_phase5_acceptance_round1.md  10_callchains_openclaw.md  110_snc_general_assistant_compatibility_v1.md  111_external_thread_phase5_acceptance_round2.md  112_external_thread_phase6_plan.md  113_oc14_subagent_completion_delivery_matrix.md  114_oc15_plugin_enablement_restart_matrix.md  115_cc13_delegation_followup_remote_control_matrix.md  116_syn07_snc_milestone2_operator_profile.md  117_snc_controller_launch_path_v1.md  118_snc_worker_diagnostics_state_hygiene_v1.md  119_external_thread_phase6_acceptance_round1.md  11_callchains_cc.md  120_external_thread_phase7_plan.md  121_oc16_contextengine_slot_lifecycle_matrix.md  122_oc17_config_path_statedir_matrix.md  123_cc14_memory_hygiene_explainability_matrix.md  124_syn08_snc_milestone2_delivery_docs_envelope.md  125_snc_clean_host_delivery_rehearsal_v1.md  126_external_thread_phase7_acceptance_round1.md  127_external_thread_phase8_plan.md  (+127 more)
(+109 files in other folders)
